--- a/index.html
+++ b/index.html
@@ -199,17 +199,17 @@
             <h2>My toolbox - everything I know (so far)</h2>
         </div>
         <div class="skills-box">
-            <img class="toolIcons" src="./Graphics/tools icons/illustrator.svg" alt="adobe illustrator icon">
-            <img class="toolIcons" src="./Graphics/tools icons/Photoshop.svg" alt="adobe photoshop icon">
-            <img class="toolIcons" src="./Graphics/tools icons/Aftereffects.svg" alt="adobe after effects icon">
-            <img class="toolIcons" src="./Graphics/tools icons/" alt="adobe xd icon">
-            <img class="toolIcons" src="Graphics/tools icons/Figma (Prototyping).svg" alt="figma icon">
-            <img class="toolIcons" src="Graphics/tools icons/Procreate (Illustrations).svg" alt="procreate icon">
-            <img class="toolIcons" src="Graphics/tools icons/CANVA.svg" alt="canva icon">
+            <img class="toolIcons" src="Graphics/tools icons/illustrator.svg" alt="adobe illustrator icon">
+            <img class="toolIcons" src="Graphics/tools icons/photoshop.svg" alt="adobe photoshop icon">
+            <img class="toolIcons" src="Graphics/tools icons/aftereffects.svg" alt="adobe after effects icon">
+            <img class="toolIcons" src="/Graphics/tools icons/XD.svg" alt="adobe xd icon">
+            <img class="toolIcons" src="/Graphics/tools icons/figma.svg" alt="figma icon">
+            <img class="toolIcons" src="/Graphics/tools icons/procreate.svg" alt="procreate icon">
+            <img class="toolIcons" src="/Graphics/tools icons/CANVA.svg" alt="canva icon">
             <img class="toolIcons" src="Graphics/tools icons/html5.svg" alt="html icon">
             <img class="toolIcons" src="Graphics/tools icons/CSS3.svg" alt="css icon">
             <img class="toolIcons" src="Graphics/tools icons/JS.svg" alt="javaScript icon">
-            <img class="toolIcons" src="Graphics/tools icons/Midjourney (AI ART).svg" alt="midjourney icon">
+            <img class="toolIcons" src="Graphics/tools icons/midjourney.svg" alt="midjourney icon">
 
         </div>
     </section>
@@ -306,11 +306,11 @@
                     </p>
                     <div class="tools-used">
                         <div class="inside">
-                            <img src="Graphics/purpleicons/Midjourney (AI ART).png" alt="">
+                            <img src="Graphics/purpleicons/Midjourney(AI ART).png" alt="">
                             <p>AI Art</p>
                         </div>
                         <div class="inside">
-                            <img src="Graphics/purpleicons/Figma (Prototyping).png" alt="">
+                            <img src="Graphics/purpleicons/Figma(Prototyping).png" alt="">
                             <p>Figma</p>
                         </div>
                         <div class="inside">
@@ -372,7 +372,7 @@
                         </p>
                         <div class="tools-used">
                             <div class="inside">
-                                <img src="Graphics/purpleicons/Figma (Prototyping).png" alt="">
+                                <img src="Graphics/purpleicons/Figma(Prototyping).png" alt="">
                                 <p>Figma</p>
                             </div>
                             <div class="inside">
@@ -458,11 +458,11 @@
                             </p>
                             <div class="tools-used">
                                 <div class="inside">
-                                    <img src="Graphics/purpleicons/Midjourney (AI ART).png" alt="">
+                                    <img src="Graphics/purpleicons/Midjourney(AI ART).png" alt="">
                                     <p>AI ART</p>
                                 </div>
                                 <div class="inside">
-                                    <img src="Graphics/purpleicons/Figma (Prototyping).png" alt="">
+                                    <img src="Graphics/purpleicons/Figma(Prototyping).png" alt="">
                                     <p>Figma</p>
                                 </div>
                                 <div class="inside">
