--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
             <img class="toolIcons" src="Graphics/tools icons/illustrator.svg" alt="adobe illustrator icon">
             <img class="toolIcons" src="Graphics/tools icons/photoshop.svg" alt="adobe photoshop icon">
             <img class="toolIcons" src="Graphics/tools icons/aftereffects.svg" alt="adobe after effects icon">
-            <img class="toolIcons" src="/Graphics/tools icons/XD.svg" alt="adobe xd icon">
-            <img class="toolIcons" src="/Graphics/tools icons/figma.svg" alt="figma icon">
-            <img class="toolIcons" src="/Graphics/tools icons/procreate.svg" alt="procreate icon">
-            <img class="toolIcons" src="/Graphics/tools icons/CANVA.svg" alt="canva icon">
+            <img class="toolIcons" src="Graphics/tools icons/xd.svg" alt="adobe xd icon">
+            <img class="toolIcons" src="Graphics/tools icons/figma.svg" alt="figma icon">
+            <img class="toolIcons" src="Graphics/tools icons/procreate.svg" alt="procreate icon">
+            <img class="toolIcons" src="Graphics/tools icons/CANVA.svg" alt="canva icon">
             <img class="toolIcons" src="Graphics/tools icons/html5.svg" alt="html icon">
             <img class="toolIcons" src="Graphics/tools icons/CSS3.svg" alt="css icon">
             <img class="toolIcons" src="Graphics/tools icons/JS.svg" alt="javaScript icon">
