--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <img class="toolIcons" src="Graphics/tools icons/xd.svg" alt="adobe xd icon">
             <img class="toolIcons" src="Graphics/tools icons/figma.svg" alt="figma icon">
             <img class="toolIcons" src="Graphics/tools icons/procreate.svg" alt="procreate icon">
-            <img class="toolIcons" src="Graphics/tools icons/CANVA.svg" alt="canva icon">
+            <img class="toolIcons" src="Graphics/tools icons/canva.svg" alt="canva icon">
             <img class="toolIcons" src="Graphics/tools icons/html5.svg" alt="html icon">
             <img class="toolIcons" src="Graphics/tools icons/CSS3.svg" alt="css icon">
             <img class="toolIcons" src="Graphics/tools icons/JS.svg" alt="javaScript icon">
