--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <img class="toolIcons" src="Graphics/tools icons/illustrator.svg" alt="adobe illustrator icon">
             <img class="toolIcons" src="Graphics/tools icons/photoshop.svg" alt="adobe photoshop icon">
             <img class="toolIcons" src="Graphics/tools icons/aftereffects.svg" alt="adobe after effects icon">
-            <img class="toolIcons" src="./Graphics/tools icons/xd.svg" alt="adobe xd icon">
+            <img class="toolIcons" src="Graphics/tools icons/adobexd.svg" alt="adobe xd icon">
             <img class="toolIcons" src="Graphics/tools icons/figma.svg" alt="figma icon">
             <img class="toolIcons" src="Graphics/tools icons/procreate.svg" alt="procreate icon">
             <img class="toolIcons" src="./Graphics/tools icons/canva.svg" alt="canva icon">
