--- a/Projects/sweety lp/index.html
+++ b/Projects/sweety lp/index.html
@@ -96,14 +96,14 @@
                     </div>
 
                     <div class="tool">
-                        <img src="graphcs/purpleicons/CSS3.png" alt="figma icon">
+                        <img src="graphcs/purpleicons/figma.png" alt="figma icon">
                         <p>Figma</p>
                     </div>
 
                 </div>
 
-                <a target="_blank" href="Sweety project/project-index.html"><img class=" icons"
-                        src="graphcs/view icon.svg" alt="icon of a bigger screen view"></a>
+                <a target="_blank" href="Sweety project/index.html"><img class=" icons" src="graphcs/view icon.svg"
+                        alt="icon of a bigger screen view"></a>
 
             </div>
             <img id="screenshot" src="graphcs/sweety screenshot.png" alt="screenshot of the project">
