--- a/index.html
+++ b/index.html
@@ -306,11 +306,11 @@
                     </p>
                     <div class="tools-used">
                         <div class="inside">
-                            <img src="Graphics/purpleicons/Midjourney(AI ART).png" alt="">
+                            <img src="Graphics/purpleicons/midjourney.png" alt="">
                             <p>AI Art</p>
                         </div>
                         <div class="inside">
-                            <img src="Graphics/purpleicons/Figma(Prototyping).png" alt="">
+                            <img src="Graphics/purpleicons/figma.png" alt="">
                             <p>Figma</p>
                         </div>
                         <div class="inside">
@@ -372,7 +372,11 @@
                         </p>
                         <div class="tools-used">
                             <div class="inside">
-                                <img src="Graphics/purpleicons/Figma(Prototyping).png" alt="">
+                                <img src="Graphics/purpleicons/midjourney.png" alt="">
+                                <p>AI Art</p>
+                            </div>
+                            <div class="inside">
+                                <img src="Graphics/purpleicons/figma.png" alt="">
                                 <p>Figma</p>
                             </div>
                             <div class="inside">
@@ -458,11 +462,11 @@
                             </p>
                             <div class="tools-used">
                                 <div class="inside">
-                                    <img src="Graphics/purpleicons/Midjourney(AI ART).png" alt="">
-                                    <p>AI ART</p>
+                                    <img src="Graphics/purpleicons/midjourney.png" alt="">
+                                    <p>AI Art</p>
                                 </div>
                                 <div class="inside">
-                                    <img src="Graphics/purpleicons/Figma(Prototyping).png" alt="">
+                                    <img src="Graphics/purpleicons/figma.png" alt="">
                                     <p>Figma</p>
                                 </div>
                                 <div class="inside">
@@ -470,7 +474,7 @@
                                     <p>html</p>
                                 </div>
                                 <div class="inside">
-                                    <img src="Graphics/purpleicons/CSS3.png" alt="css icon">
+                                    <img src="Graphics/purpleicons/CSS3.png" alt="">
                                     <p>css</p>
                                 </div>
                             </div>
@@ -516,6 +520,14 @@
                             <p>Next project</p>
                             </p>
                             <div class="tools-used">
+                                <div class="inside">
+                                    <img src="Graphics/purpleicons/midjourney.png" alt="">
+                                    <p>AI Art</p>
+                                </div>
+                                <div class="inside">
+                                    <img src="Graphics/purpleicons/figma.png" alt="">
+                                    <p>Figma</p>
+                                </div>
                                 <div class="inside">
                                     <img src="Graphics/purpleicons/html5.png" alt="">
                                     <p>html</p>
