--- a/index.html
+++ b/index.html
@@ -513,11 +513,15 @@
 
                     <div class="project-container">
                         <div class="top">
-                            <img src="Graphics/projects screens/explore the world screen.png" alt="">
+                            <img src="Graphics/projects screens/lastone-screen.png" alt="">
                         </div>
                         <div class="bottom">
-                            <h2>Headline</h2>
-                            <p>Next project</p>
+                            <h2>Last one standing</h2>
+                            <p>Dive into this interactive story with your mind open and your heart ready to be
+                                captivated. "Last One Standing" is not
+                                just any tale—it's an augmented reality adventure that challenges you to embrace your
+                                uniqueness and celebrate what
+                                makes you special.</p>
                             </p>
                             <div class="tools-used">
                                 <div class="inside">
@@ -538,7 +542,7 @@
                                 </div>
                             </div>
                             <button class="project-buttons">
-                                <a target="_blank" href="">Click to see project</a>
+                                <a target="_blank" href="./Projects/last one lp/index.html">Click to see project</a>
                             </button>
                         </div>
                     </div>
@@ -618,7 +622,7 @@
         <div id="cv-box">
             <h1>What to hear more?</h1>
             <a id="cv" href="./downloads/Shir Birenbaum CV.pdf" download="./downloads/Shir Birenbaum CV.pdf"><img src=""
-                    alt=""><img src="Graphics/download icon.svg" alt="download icon" style="">Download
+                    alt=""><img src="Graphics/download icon.svg" alt="download icon">Download
                 my CV</a>
         </div>
 
