--- a/Projects/last one lp/index.html
+++ b/Projects/last one lp/index.html
@@ -29,7 +29,7 @@
 
             <nav>
                 <a id="logo" href="../../index.html">
-                    <img src="Graphcs/logo.png" alt="logo saying genie-s" style="width: 100px;">
+                    <img src="graphcs/logo.png" alt="logo saying genie-s" style="width: 100px;">
                 </a>
 
                 <ul id="menuList">
@@ -63,7 +63,7 @@
             </nav>
             <img id="whatsapp" src="https://img.icons8.com/?size=100&id=16712&format=png&color=000000"
                 alt="whatsapp icon">
-        </div><img id="nav-bar-bg" src="Graphcs/nav-bg.svg" alt="purple abstract shape for the nav bar background">
+        </div><img id="nav-bar-bg" src="graphcs/nav-bg.svg" alt="purple abstract shape for the nav bar background">
 
     </header>
 
