--- a/Projects/free consult lp/index.html
+++ b/Projects/free consult lp/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>free consult landing page</title>
 
     <link rel="stylesheet" href="style.css">
 
@@ -28,7 +28,7 @@
 
 
             <nav>
-                <a id="logo" href="../../index.html"><img src="Graphcs/logo.png" alt="logo saying genie-s"
+                <a id="logo" href="../../index.html"><img src="graphcs/logo.png" alt="logo saying genie-s"
                         style="width: 100px;"></a>
 
                 <ul id="menuList">
@@ -68,7 +68,7 @@
             </nav>
             <img id="whatsapp" src="https://img.icons8.com/?size=100&id=16712&format=png&color=000000"
                 alt="whatsapp icon">
-        </div><img id="nav-bar-bg" src="Graphcs/nav-bg.svg" alt="purple abstract shape for the nav bar background">
+        </div><img id="nav-bar-bg" src="graphcs/nav-bg.svg" alt="purple abstract shape for the nav bar background">
 
     </header>
 
