--- a/Projects/last one lp/index.html
+++ b/Projects/last one lp/index.html
@@ -72,12 +72,19 @@
 
     <div class="page">
         <div class="main-container">
-            <h1>A journey to hell and back
+            <h1>Last one standing
             </h1>
-            <p>In this web3 shooting survival game, you play in a team as either offence or defence. The
-                background story is rich and there are numerous challenges to overcome. Immerse yourself
-                in a world where every decision
-                counts
+            <p>Dive into this interactive story with your mind open and your heart ready to be captivated. "Last One
+                Standing" is not
+                just any tale—it's an augmented reality adventure that challenges you to embrace your uniqueness and
+                celebrate what
+                makes you special. As you navigate through gripping storylines and make critical decisions, you'll
+                unlock hidden layers
+                of yourself and the world around you. Join us in a journey that blends technology with storytelling,
+                creating an
+                experience that's as dynamic and extraordinary as you are. Stand out, be the last one standing, and
+                discover the magic
+                within.
             </p>
             <div class="icons-box">
 
